@@ -335,7 +335,12 @@ public final class MainGui implements CalendarLayoutSettingProvider {
 				if (maybeNewSelected.isPresent()) {
 					tabs.setSelectedComponent(maybeNewSelected.orElseThrow());
 				} else {
-					tabs.setSelectedIndex(0);
+					// if all habits were hidden, then there will be zero tabs
+					if (tabs.getTabCount() > 0) {
+						tabs.setSelectedIndex(0);
+					} else {
+						tabs.setSelectedIndex(-1);
+					}
 				}
 			}
 		});
