@@ -1,3 +1,6 @@
+- Hiding last visible habit from "Reorder habits" dialog caused an exception to
+  be thrown, which has been corrected.
+
 v1.6
 - Rendering of the icon in the title bar of the main window has been
   fixed in Microsoft Windows.
